fix the path error

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 				<img src="../img/.png">
 			</div>
 				<ul class="menu">
-					<li class="selected"><a href="../html/index.html">HOME</a></li>
+					<li class="selected"><a href="../index.html">HOME</a></li>
 					<li><a href="../inset-list.html">CV</a></li>
 					<li><a href="../search.html">PORTFOLIO</a></li>
 					<li><a href="">CONTACT</a></li>
