--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
 </head>
 <body>
 	<div class="BD">
+		<div class="Bg">
 		<div class="header">
 			<div class="header-box">
 			<div class="top-img">
@@ -92,6 +93,7 @@
 				</li>
 			</ul>
 		</div>
+	</div>
 	</div>
 </div>
 
