--- a/index.html
+++ b/index.html
@@ -37,17 +37,17 @@
 					<div class="box" id="b_box">
 				  		<a href="../html/inset.html"><div class="img-title"><span>See Word Reading Project</span></div></a>
 			  			<div class="sub-img-title">
-			  				<div class="head-img"><a href="../html/inset.html"><span class="head-img-name">See Project</span></a></div>
+			  				<div class="head-img"><a href="../inset.html"><span class="head-img-name">See Project</span></a></div>
 			  			</div>
 				  	</div>
 				</li>
 
 				<li class="img-box">
-					<a href="../html/inset.html"><img src="../img/2.png"></a>
+					<a href="../inset.html"><img src="../img/2.png"></a>
 					<div class="box">
 				  		<a href="../html/inset.html"><div class="img-title"><span>图标设计,应对APP臃肿化</span></div></a>
 			  			<div class="sub-img-title">
-			  				<div class="head-img"><a href="../html/inset.html"><span class="head-img-name">那谁家小那谁</span></a></div>
+			  				<div class="head-img"><a href="../inset.html"><span class="head-img-name">那谁家小那谁</span></a></div>
 			  			</div>
 				  	</div>
 				</li>
@@ -95,21 +95,8 @@
 		</div>
 	</div>
 	</div>
-</div>
 
-<!--loading 图-->
-	<div class="infscr-loading" style="display:none;">
-		<img alt="Loading..." src="../img/loading.gif">
-		<span></span>
-	</div>	
-<!--loading 图-->
-    
-    <div id="go-top">
-    	<a href=""><span></span></a>
-    </div>
-
-	<!--底页-->
-<div class="footer">
+	<div class="footer">
 	    	<div class="bot-link">
 	        	<div class="link-list">
 	        		  <ul class="linked">
@@ -123,6 +110,12 @@
 	        		  </div>
 	        	</div>
         	</div>	
+    </div>
 </div>
+    
+    <div id="go-top">
+    	<a href=""><span></span></a>
+    </div>
+
 </body>
 </html>
