--- a/inset-list.html
+++ b/inset-list.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="zh-CN">
+<html lang="en">
 <head>
     <meta charset="UTF-8"/>
     <meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0"/>
@@ -7,10 +7,10 @@
     <meta name="title" content=""/>
     <meta name="description" content=""/>
     <meta name="keywords" content=""/>
-    <title>搜狐博客--搜索结果</title>
-    <link rel="stylesheet" type="text/css" href="../css/css3.css">
-    <script type="text/javascript" src="../js/jquery-1.8.0.min.js"></script>
-    <script type="text/javascript" src="../js/myjs.js"></script>
+    <title>Shuai Webdesign</title>
+    <link rel="stylesheet" type="text/css" href="css/css3.css">
+    <script type="text/javascript" src="js/jquery-1.8.0.min.js"></script>
+    <script type="text/javascript" src="js/myjs.js"></script>
 </head>
 <body>
 	<div class="BD">
