--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="zh-CN">
+<html lang="en">
 <head>
     <meta charset="UTF-8"/>
     <meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0"/>
@@ -22,7 +22,7 @@
 			</div>
 				<ul class="menu">
 					<li class="selected"><a href="../index.html">HOME</a></li>
-					<li><a href="../inset-list.html">CV</a></li>
+					<li><a href="inset-list.html">CV</a></li>
 					<li><a href="../search.html">PORTFOLIO</a></li>
 					<li><a href="">CONTACT</a></li>
 				</ul>
@@ -33,7 +33,7 @@
 		<div class="waterfall">
 			<ul class="img-list">
 				<li class="img-box" id="img-box-b">
-					<a href="../html/inset.html"><img id="b-img" src="../img/1.png"></a>
+					<a href="../html/inset.html"><img id="b-img" src="img/1.png"></a>
 					<div class="box" id="b_box">
 				  		<a href="../html/inset.html"><div class="img-title"><span>See Word Reading Project</span></div></a>
 			  			<div class="sub-img-title">
@@ -43,7 +43,7 @@
 				</li>
 
 				<li class="img-box">
-					<a href="../inset.html"><img src="../img/2.png"></a>
+					<a href="../inset.html"><img src="img/2.png"></a>
 					<div class="box">
 				  		<a href="../html/inset.html"><div class="img-title"><span>图标设计,应对APP臃肿化</span></div></a>
 			  			<div class="sub-img-title">
@@ -100,14 +100,10 @@
 	    	<div class="bot-link">
 	        	<div class="link-list">
 	        		  <ul class="linked">
-	        			<li class="lik lik-t"><span>477 Riddle Rd,Cincinnati,OH</span></li>
+	        			<li class="lik lik-t"><p>477 Riddle Rd</p><p>Cincinnati,OH</p></li>
 	        			<li class="lik"><a href="">917-545-2916</a></li>
 	        			<li class="lik"><a href="">shuaizhou487@gmail.com</a></li>
 	        		  </ul>
-	        		  <div class="lik_logo">
-	        		  	<a  class="qqweibo" href=""></a>
-	        		  	<a  class="weibo" href=""></a>
-	        		  </div>
 	        	</div>
         	</div>	
     </div>
