--- a/index.html
+++ b/index.html
@@ -29,6 +29,14 @@
 		</div>
 		</div>
 
+		<div class="intro">
+			<div class="intro_infor">
+				<div class="intro_infor_left">- Hello</div>
+				<div class="intro_infor_right"><p>I am shuai, from University fo Cincinnati, DAAP College. 
+I focus on UI & UX design. In next year, i was worked for Sohu.com, one of the most biggest Internet Company in China. Our team has notched up 2 Billion views to date in June 23 2014.</p></div>
+			</div>
+		</div>
+
 	<div class="container">
 		<div class="waterfall">
 			<ul class="img-list">
