--- a/index.html
+++ b/index.html
@@ -50,22 +50,12 @@ I focus on UI & UX design. In next year, i was worked for Sohu.com, one of the m
 				  	</div>
 				</li>
 
-				<li class="img-box">
-					<a href="../inset.html"><img src="img/2.png"></a>
+				<li class="img-box" id="box_2">
+					<a href="../inset.html"><img id="m-img" src="img/2.png"></a>
 					<div class="box">
-				  		<a href="../html/inset.html"><div class="img-title"><span>图标设计,应对APP臃肿化</span></div></a>
+				  		<a href="../inset.html"><div class="img-title"><span>图标设计,应对APP臃肿化</span></div></a>
 			  			<div class="sub-img-title">
 			  				<div class="head-img"><a href="../inset.html"><span class="head-img-name">那谁家小那谁</span></a></div>
-			  			</div>
-				  	</div>
-				</li>
-
-				<li class="img-box">
-					<a href="../html/inset.html"><img src="../img/2.png"></a>
-					<div class="box">
-				  		<a href="../html/inset.html"><div class="img-title"><span>图标设计,应对APP臃肿化</span></div></a>
-			  			<div class="sub-img-title">
-			  				<div class="head-img"><a href="../html/inset.html"><span class="head-img-name">那谁家小那谁</span></a></div>
 			  			</div>
 				  	</div>
 				</li>
