--- a/index.html
+++ b/index.html
@@ -21,10 +21,10 @@
 				<img src="../img/.png">
 			</div>
 				<ul class="menu">
-					<li class="selected"><a href="../index.html">HOME</a></li>
-					<li><a href="inset-list.html">CV</a></li>
-					<li><a href="../search.html">PORTFOLIO</a></li>
-					<li><a href="">CONTACT</a></li>
+					<li class="selected"><a href="index.html">HOME</a></li>
+					<li><a href="cv.html">CV</a></li>
+					<li><a href="inset.html">PORTFOLIO</a></li>
+					<li><a href="store.html">CONTACT</a></li>
 				</ul>
 		</div>
 		</div>
@@ -91,6 +91,7 @@ I focus on UI & UX design. In next year, i was worked for Sohu.com, one of the m
 				</li>
 			</ul>
 		</div>
+		<div><a href="">Show All</a></div>
 	</div>
 	</div>
 
