--- a/store.html
+++ b/store.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="zh-CN">
+<html lang="en">
 <head>
     <meta charset="UTF-8"/>
     <meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0"/>
@@ -7,35 +7,34 @@
     <meta name="title" content=""/>
     <meta name="description" content=""/>
     <meta name="keywords" content=""/>
-    <title>搜狐博客</title>
-    <link rel="stylesheet" type="text/css" href="../css/css3.css">
-    <script type="text/javascript" src="../js/jquery-1.8.0.min.js"></script>
-    <script type="text/javascript" src="../js/myjs.js"></script>
+    <title>Shuai Webdesign</title>
+    <link rel="stylesheet" type="text/css" href="css/css3.css">
+    <script type="text/javascript" src="js/jquery-1.8.0.min.js"></script>
+    <script type="text/javascript" src="js/myjs.js"></script>
 </head>
 <body>
+	<div class="BD">
+		<div class="Bg">
 		<div class="header">
 			<div class="header-box">
 			<div class="top-img">
-				<img src="../img/logo.png">
+				<img src="../img/.png">
 			</div>
 				<ul class="menu">
-					<li><a href="../html/index.html">首页</a></li>
-					<li><a href="../html/inset-list.html">设计</a></li>
-					<li><a href="../html/search.html">生活</a></li>
-					<li><a href="">X lab</a></li>
-					<li class="selected"><a href="../html/store.html">Store</a></li>
+					<li><a href="index.html">HOME</a></li>
+					<li><a href="cv.html">CV</a></li>
+					<li><a href="inset.html">PORTFOLIO</a></li>
+					<li class="selected"><a href="store.html">CONTACT</a></li>
 				</ul>
-
-			<div class="search-box">
-				<form active="../html/search.html" role="search" method="get" class="search-form">
-				  <label>
-				  	<span class="screen-reader-text">搜索作品</span>
-				  	<input id="t" type="search" class="search-field" placeholder="搜索作品" value="" name="s" title="搜索作品">
-				  </label>			
-					<input id="search_icon" type="submit" value="" class="search-submit">
-				</form>
-			</div>
 		</div>
+		</div>
+
+		<div class="intro">
+			<div class="intro_infor">
+				<div class="intro_infor_left">- Hello</div>
+				<div class="intro_infor_right"><p>I am shuai, from University fo Cincinnati, DAAP College. 
+I focus on UI & UX design. In next year, i was worked for Sohu.com, one of the most biggest Internet Company in China. Our team has notched up 2 Billion views to date in June 23 2014.</p></div>
+			</div>
 		</div>
 
 	    <div class="st">
@@ -126,24 +125,13 @@
 	    	<div class="bot-link">
 	        	<div class="link-list">
 	        		  <ul class="linked">
-	        			<li class="lik lik-t"><span>友情链接：</span></li>
-	        			<li class="lik"><a href="">搜狐MUED</a></li>
-	        			<li class="lik"><a href="">搜狐畅游VC</a></li>
-	        			<li class="lik"><a href="">搜狗UED</a></li>
-	        			<li class="lik"><a href="">UIRSS</a></li>
-	        			<li class="lik"><a href="">阿里巴巴UED</a></li>
-	        			<li class="lik"><a href="">百度UX</a></li>
-	        			<li class="lik"><a href="">优秀网页设计</a></li>
+	        			<li class="lik lik-t"><p>477 Riddle Rd</p><p>Cincinnati,OH</p></li>
+	        			<li class="lik"><a href="">917-545-2916</a></li>
+	        			<li class="lik"><a href="">shuaizhou487@gmail.com</a></li>
 	        		  </ul>
-	        		  <div class="lik_logo">
-	        		  	<a  class="qqweibo" href=""></a>
-	        		  	<a  class="weibo" href=""></a>
-	        		  </div>
-	        	</div>	  
-        	    <div class="bot-ex">
-        	    	<p>Copyright © 1998-2014 tv.sohu.com. All Rights Reserved Home | Contact | Jobs</p>
-        	    </div>
+	        	</div>
         	</div>	
+    </div>
 
 </body>
 </html>
