--- a/cv.html
+++ b/cv.html
@@ -38,14 +38,6 @@ I focus on UI & UX design. In next year, i was worked for Sohu.com, one of the m
 		</div>
 
 	<div class="container">
-		<div class="me-list">
-			<ul>
-				<li id="selec"><a href="">全部</a></li>
-				<li><a href="">用户研究</a></li>
-				<li><a href="">交互设计</a></li>
-				<li><a href="">视觉设计</a></li>
-			</ul>
-		</div>
 		<div class="waterfall">
 			<ul class="img-list">
 				<li class="img-box">
@@ -53,7 +45,7 @@ I focus on UI & UX design. In next year, i was worked for Sohu.com, one of the m
 					<div class="box">
 				  		<a href="../html/inset.html"><div class="img-title"><span>图标设计,应对APP臃肿化</span></div></a>
 			  			<div class="sub-img-title">
-			  				<div class="head-img"><a href="../html/inset.html"><img src="../img/designer.png"><span class="head-img-name">那谁家小那谁</span></a><div class="zan"><span>12</span></div></div>
+			  				<div class="head-img"><a href="../html/inset.html"><span class="head-img-name">那谁家小那谁</span></a></div>
 			  			</div>
 				  	</div>
 				</li>
@@ -63,7 +55,7 @@ I focus on UI & UX design. In next year, i was worked for Sohu.com, one of the m
 					<div class="box">
 				  		<a href="../html/inset.html"><div class="img-title"><span>图标设计,应对APP臃肿化</span></div></a>
 			  			<div class="sub-img-title">
-			  				<div class="head-img"><a href="../html/inset.html"><img src="../img/designer.png"><span class="head-img-name">那谁家小那谁</span></a><div class="zan"><span>12</span></div></div>
+			  				<div class="head-img"><a href="../html/inset.html"><span class="head-img-name">那谁家小那谁</span></a></div>
 			  			</div>
 				  	</div>
 				</li>
@@ -73,7 +65,7 @@ I focus on UI & UX design. In next year, i was worked for Sohu.com, one of the m
 					<div class="box">
 				  		<a href="../html/inset.html"><div class="img-title"><span>图标设计,应对APP臃肿化</span></div></a>
 			  			<div class="sub-img-title">
-			  				<div class="head-img"><a href="../html/inset.html"><img src="../img/designer.png"><span class="head-img-name">那谁家小那谁</span></a><div class="zan"><span>12</span></div></div>
+			  				<div class="head-img"><a href="../html/inset.html"><span class="head-img-name">那谁家小那谁</span></a></div>
 			  			</div>
 				  	</div>
 				</li>
@@ -83,7 +75,7 @@ I focus on UI & UX design. In next year, i was worked for Sohu.com, one of the m
 					<div class="box">
 				  		<a href="../html/inset.html"><div class="img-title"><span>图标设计,应对APP臃肿化</span></div></a>
 			  			<div class="sub-img-title">
-			  				<div class="head-img"><a href="../html/inset.html"><img src="../img/designer.png"><span class="head-img-name">那谁家小那谁</span></a><div class="zan"><span>12</span></div></div>
+			  				<div class="head-img"><a href="../html/inset.html"><span class="head-img-name">那谁家小那谁</span></a></div>
 			  			</div>
 				  	</div>
 				</li>
@@ -93,7 +85,7 @@ I focus on UI & UX design. In next year, i was worked for Sohu.com, one of the m
 					<div class="box">
 				  		<a href="../html/inset.html"><div class="img-title"><span>图标设计,应对APP臃肿化</span></div></a>
 			  			<div class="sub-img-title">
-			  				<div class="head-img"><a href="../html/inset.html"><img src="../img/designer.png"><span class="head-img-name">那谁家小那谁</span></a><div class="zan"><span>12</span></div></div>
+			  				<div class="head-img"><a href="../html/inset.html"><span class="head-img-name">那谁家小那谁</span></a></div>
 			  			</div>
 				  	</div>
 				</li>
@@ -103,7 +95,7 @@ I focus on UI & UX design. In next year, i was worked for Sohu.com, one of the m
 					<div class="box">
 				  		<a href="../html/inset.html"><div class="img-title"><span>图标设计,应对APP臃肿化</span></div></a>
 			  			<div class="sub-img-title">
-			  				<div class="head-img"><a href="../html/inset.html"><img src="../img/designer.png"><span class="head-img-name">那谁家小那谁</span></a><div class="zan"><span>12</span></div></div>
+			  				<div class="head-img"><a href="../html/inset.html"><span class="head-img-name">那谁家小那谁</span></a></div>
 			  			</div>
 				  	</div>
 				</li>
@@ -113,7 +105,7 @@ I focus on UI & UX design. In next year, i was worked for Sohu.com, one of the m
 					<div class="box">
 				  		<a href="../html/inset.html"><div class="img-title"><span>图标设计,应对APP臃肿化</span></div></a>
 			  			<div class="sub-img-title">
-			  				<div class="head-img"><a href="../html/inset.html"><img src="../img/designer.png"><span class="head-img-name">那谁家小那谁</span></a><div class="zan"><span>12</span></div></div>
+			  				<div class="head-img"><a href="../html/inset.html"><span class="head-img-name">那谁家小那谁</span></a></div>
 			  			</div>
 				  	</div>
 				</li>
