--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@ I focus on UI & UX design. In next year, i was worked for Sohu.com, one of the m
 				</li>
 
 				<li class="img-box">
-					<a href="../html/inset.html"><img src="../img/2.png"></a>
+					<a href="../html/inset.html"><img src="img/3.png"></a>
 					<div class="box">
 				  		<a href="../html/inset.html"><div class="img-title"><span>图标设计,应对APP臃肿化</span></div></a>
 			  			<div class="sub-img-title">
@@ -71,7 +71,7 @@ I focus on UI & UX design. In next year, i was worked for Sohu.com, one of the m
 				</li>
 
 				<li class="img-box">
-					<a href="../html/inset.html"><img src="../img/2.png"></a>
+					<a href="../html/inset.html"><img src="img/3.png"></a>
 					<div class="box">
 				  		<a href="../html/inset.html"><div class="img-title"><span>图标设计,应对APP臃肿化</span></div></a>
 			  			<div class="sub-img-title">
@@ -81,7 +81,7 @@ I focus on UI & UX design. In next year, i was worked for Sohu.com, one of the m
 				</li>
 
 				<li class="img-box">
-					<a href="../html/inset.html"><img src="../img/2.png"></a>
+					<a href="../html/inset.html"><img src="img/3.png"></a>
 					<div class="box">
 				  		<a href="../html/inset.html"><div class="img-title"><span>图标设计,应对APP臃肿化</span></div></a>
 			  			<div class="sub-img-title">
