--- a/index.html
+++ b/index.html
@@ -85,13 +85,13 @@ I focus on UI & UX design. In next year, i was worked for Sohu.com, one of the m
 					<div class="box">
 				  		<a href="../html/inset.html"><div class="img-title"><span>图标设计,应对APP臃肿化</span></div></a>
 			  			<div class="sub-img-title">
-			  				<div class="head-img"><a href="../html/inset.html"><span class="head-img-name">那谁家小那谁</span></a></div>
+			  				<div class="head-img"><a href="inset.html"><span class="head-img-name">那谁家小那谁</span></a></div>
 			  			</div>
 				  	</div>
 				</li>
 			</ul>
 		</div>
-		<div><a href="">Show All</a></div>
+		<div class="show_btn"><a href="">Show All</a></div>
 	</div>
 	</div>
 
