--- a/cv.html
+++ b/cv.html
@@ -31,9 +31,7 @@
 
 		<div class="intro">
 			<div class="intro_infor">
-				<div class="intro_infor_left">- Hello</div>
-				<div class="intro_infor_right"><p>I am shuai, from University fo Cincinnati, DAAP College. 
-I focus on UI & UX design. In next year, i was worked for Sohu.com, one of the most biggest Internet Company in China. Our team has notched up 2 Billion views to date in June 23 2014.</p></div>
+				<div class="intro_infor_icon"><a href="">Home</a><span> / CV</span></div>
 			</div>
 		</div>
 
@@ -41,71 +39,71 @@ I focus on UI & UX design. In next year, i was worked for Sohu.com, one of the m
 		<div class="waterfall">
 			<ul class="img-list">
 				<li class="img-box">
-					<a href="../html/inset.html"><img src="../img/2.png"></a>
+					<a href="../html/inset.html"><img src="img/2.png"></a>
 					<div class="box">
 				  		<a href="../html/inset.html"><div class="img-title"><span>图标设计,应对APP臃肿化</span></div></a>
 			  			<div class="sub-img-title">
-			  				<div class="head-img"><a href="../html/inset.html"><span class="head-img-name">那谁家小那谁</span></a></div>
+			  				<div class="head-img"><a href="inset.html"><span class="head-img-name">那谁家小那谁</span></a></div>
 			  			</div>
 				  	</div>
 				</li>
 
 				<li class="img-box">
-					<a href="../html/inset.html"><img src="../img/2.png"></a>
+					<a href="../html/inset.html"><img src="img/2.png"></a>
 					<div class="box">
 				  		<a href="../html/inset.html"><div class="img-title"><span>图标设计,应对APP臃肿化</span></div></a>
 			  			<div class="sub-img-title">
-			  				<div class="head-img"><a href="../html/inset.html"><span class="head-img-name">那谁家小那谁</span></a></div>
+			  				<div class="head-img"><a href="inset.html"><span class="head-img-name">那谁家小那谁</span></a></div>
 			  			</div>
 				  	</div>
 				</li>
 
 				<li class="img-box">
-					<a href="../html/inset.html"><img src="../img/2.png"></a>
+					<a href="../html/inset.html"><img src="img/2.png"></a>
 					<div class="box">
 				  		<a href="../html/inset.html"><div class="img-title"><span>图标设计,应对APP臃肿化</span></div></a>
 			  			<div class="sub-img-title">
-			  				<div class="head-img"><a href="../html/inset.html"><span class="head-img-name">那谁家小那谁</span></a></div>
+			  				<div class="head-img"><a href="inset.html"><span class="head-img-name">那谁家小那谁</span></a></div>
 			  			</div>
 				  	</div>
 				</li>
 
 				<li class="img-box">
-					<a href="../html/inset.html"><img src="../img/2.png"></a>
+					<a href="../html/inset.html"><img src="img/2.png"></a>
 					<div class="box">
 				  		<a href="../html/inset.html"><div class="img-title"><span>图标设计,应对APP臃肿化</span></div></a>
 			  			<div class="sub-img-title">
-			  				<div class="head-img"><a href="../html/inset.html"><span class="head-img-name">那谁家小那谁</span></a></div>
+			  				<div class="head-img"><a href="inset.html"><span class="head-img-name">那谁家小那谁</span></a></div>
 			  			</div>
 				  	</div>
 				</li>
 
 				<li class="img-box">
-					<a href="../html/inset.html"><img src="../img/2.png"></a>
+					<a href="../html/inset.html"><img src="img/2.png"></a>
 					<div class="box">
 				  		<a href="../html/inset.html"><div class="img-title"><span>图标设计,应对APP臃肿化</span></div></a>
 			  			<div class="sub-img-title">
-			  				<div class="head-img"><a href="../html/inset.html"><span class="head-img-name">那谁家小那谁</span></a></div>
+			  				<div class="head-img"><a href="inset.html"><span class="head-img-name">那谁家小那谁</span></a></div>
 			  			</div>
 				  	</div>
 				</li>
 
 				<li class="img-box">
-					<a href="../html/inset.html"><img src="../img/2.png"></a>
+					<a href="../html/inset.html"><img src="img/2.png"></a>
 					<div class="box">
-				  		<a href="../html/inset.html"><div class="img-title"><span>图标设计,应对APP臃肿化</span></div></a>
+				  		<a href="inset.html"><div class="img-title"><span>图标设计,应对APP臃肿化</span></div></a>
 			  			<div class="sub-img-title">
-			  				<div class="head-img"><a href="../html/inset.html"><span class="head-img-name">那谁家小那谁</span></a></div>
+			  				<div class="head-img"><a href="inset.html"><span class="head-img-name">那谁家小那谁</span></a></div>
 			  			</div>
 				  	</div>
 				</li>
 
 				<li class="img-box">
-					<a href="../html/inset.html"><img src="../img/2.png"></a>
+					<a href="../html/inset.html"><img src="img/2.png"></a>
 					<div class="box">
-				  		<a href="../html/inset.html"><div class="img-title"><span>图标设计,应对APP臃肿化</span></div></a>
+				  		<a href="inset.html"><div class="img-title"><span>图标设计,应对APP臃肿化</span></div></a>
 			  			<div class="sub-img-title">
-			  				<div class="head-img"><a href="../html/inset.html"><span class="head-img-name">那谁家小那谁</span></a></div>
+			  				<div class="head-img"><a href="inset.html"><span class="head-img-name">那谁家小那谁</span></a></div>
 			  			</div>
 				  	</div>
 				</li>
