--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@ I focus on UI & UX design. In next year, i was worked for Sohu.com, one of the m
 				</li>
 			</ul>
 		</div>
-		<div class="show_btn"><a href="">Show All</a></div>
+		<div class="show_btn"><a href=""> → Show All</a></div>
 	</div>
 	</div>
 
