--- a/contact.html
+++ b/contact.html
@@ -8,6 +8,7 @@
     <meta name="description" content=""/>
     <meta name="keywords" content=""/>
     <title>Shuai Webdesign</title>
+    <link rel="stylesheet" type="text/css" href="css/font-awesome.min.css">
     <link rel="stylesheet" type="text/css" href="css/css3.css">
     <script type="text/javascript" src="js/jquery-1.8.0.min.js"></script>
     <script type="text/javascript" src="js/myjs.js"></script>
@@ -22,18 +23,16 @@
 			</div>
 				<ul class="menu">
 					<li><a href="index.html">HOME</a></li>
+					<li><a href="portfolio.html">PORTFOLIO</a></li>
 					<li><a href="cv.html">CV</a></li>
-					<li><a href="inset.html">PORTFOLIO</a></li>
-					<li class="selected"><a href="store.html">CONTACT</a></li>
+					<li class="selected"><a href="contact.html">CONTACT</a></li>
 				</ul>
 		</div>
 		</div>
 
 		<div class="intro">
 			<div class="intro_infor">
-				<div class="intro_infor_left">- Hello</div>
-				<div class="intro_infor_right"><p>I am shuai, from University fo Cincinnati, DAAP College. 
-I focus on UI & UX design. In next year, i was worked for Sohu.com, one of the most biggest Internet Company in China. Our team has notched up 2 Billion views to date in June 23 2014.</p></div>
+				<div class="intro_infor_icon"><a class="h_icon" href="index.html"></a><span> / Contact</span></div>
 			</div>
 		</div>
 
