--- a/portfolio.html
+++ b/portfolio.html
@@ -8,7 +8,7 @@
     <meta name="description" content=""/>
     <meta name="keywords" content=""/>
     <title>Shuai Webdesign</title>
-    <link rel="stylesheet" type="text/css" href="css/font-awesome.min.css">
+    <link rel="stylesheet" href="css/font-awesome.css">
     <link rel="stylesheet" type="text/css" href="css/css3.css">
     <script type="text/javascript" src="js/jquery-1.8.0.min.js"></script>
     <script type="text/javascript" src="js/myjs.js"></script>
@@ -22,8 +22,8 @@
 				<img src="../img/.png">
 			</div>
 				<ul class="menu">
-					<li class="selected"><a href="index.html">HOME</a></li>
-					<li><a href="portfolio.html">PORTFOLIO</a></li>
+					<li><a href="index.html">HOME</a></li>
+					<li class="selected"><a href="portfolio.html">PORTFOLIO</a></li>
 					<li><a href="cv.html">CV</a></li>
 					<li><a href="contact.html">CONTACT</a></li>
 				</ul>
@@ -32,57 +32,15 @@
 
 		<div class="intro">
 			<div class="intro_infor">
-				<div class="intro_infor_left">- Hello</div>
-				<div class="intro_infor_right"><p>I am shuai, from University fo Cincinnati, DAAP College. 
-I focus on UI & UX design. In next year, i was worked for Sohu.com, one of the most biggest Internet Company in China. Our team has notched up 2 Billion views to date in June 23 2014.</p></div>
+				<div class="intro_infor_icon"><a class="h_icon" href="index.html"></a><span>/ Portfolio</span></div>
 			</div>
 		</div>
 
 	<div class="container">
 		<div class="waterfall">
 			<ul class="img-list">
-				<li class="img-box" id="img-box-b">
-					<a href="../html/inset.html"><img id="b-img" src="img/1.png"></a>
-					<div class="box" id="b_box">
-				  		<a href="../html/inset.html"><div class="img-title"><span>See Word Reading Project</span></div></a>
-			  			<div class="sub-img-title">
-			  				<div class="head-img"><a href="../inset.html"><span class="head-img-name">See Project</span></a></div>
-			  			</div>
-				  	</div>
-				</li>
-
-				<li class="img-box" id="box_2">
-					<a href="../inset.html"><img id="m-img" src="img/2.png"></a>
-					<div class="box">
-				  		<a href="../inset.html"><div class="img-title"><span>图标设计,应对APP臃肿化</span></div></a>
-			  			<div class="sub-img-title">
-			  				<div class="head-img"><a href="../inset.html"><span class="head-img-name">那谁家小那谁</span></a></div>
-			  			</div>
-				  	</div>
-				</li>
-
 				<li class="img-box">
-					<a href="../html/inset.html"><img src="img/3.png"></a>
-					<div class="box">
-				  		<a href="../html/inset.html"><div class="img-title"><span>图标设计,应对APP臃肿化</span></div></a>
-			  			<div class="sub-img-title">
-			  				<div class="head-img"><a href="../html/inset.html"><span class="head-img-name">那谁家小那谁</span></a></div>
-			  			</div>
-				  	</div>
-				</li>
-
-				<li class="img-box">
-					<a href="../html/inset.html"><img src="img/4.png"></a>
-					<div class="box">
-				  		<a href="../html/inset.html"><div class="img-title"><span>图标设计,应对APP臃肿化</span></div></a>
-			  			<div class="sub-img-title">
-			  				<div class="head-img"><a href="../html/inset.html"><span class="head-img-name">那谁家小那谁</span></a></div>
-			  			</div>
-				  	</div>
-				</li>
-
-				<li class="img-box">
-					<a href="../html/inset.html"><img src="img/5.png"></a>
+					<a href="../html/inset.html"><img src="img/2.png"></a>
 					<div class="box">
 				  		<a href="../html/inset.html"><div class="img-title"><span>图标设计,应对APP臃肿化</span></div></a>
 			  			<div class="sub-img-title">
@@ -90,13 +48,78 @@ I focus on UI & UX design. In next year, i was worked for Sohu.com, one of the m
 			  			</div>
 				  	</div>
 				</li>
+
+				<li class="img-box">
+					<a href="../html/inset.html"><img src="img/2.png"></a>
+					<div class="box">
+				  		<a href="../html/inset.html"><div class="img-title"><span>图标设计,应对APP臃肿化</span></div></a>
+			  			<div class="sub-img-title">
+			  				<div class="head-img"><a href="inset.html"><span class="head-img-name">那谁家小那谁</span></a></div>
+			  			</div>
+				  	</div>
+				</li>
+
+				<li class="img-box">
+					<a href="../html/inset.html"><img src="img/2.png"></a>
+					<div class="box">
+				  		<a href="../html/inset.html"><div class="img-title"><span>图标设计,应对APP臃肿化</span></div></a>
+			  			<div class="sub-img-title">
+			  				<div class="head-img"><a href="inset.html"><span class="head-img-name">那谁家小那谁</span></a></div>
+			  			</div>
+				  	</div>
+				</li>
+
+				<li class="img-box">
+					<a href="../html/inset.html"><img src="img/2.png"></a>
+					<div class="box">
+				  		<a href="../html/inset.html"><div class="img-title"><span>图标设计,应对APP臃肿化</span></div></a>
+			  			<div class="sub-img-title">
+			  				<div class="head-img"><a href="inset.html"><span class="head-img-name">那谁家小那谁</span></a></div>
+			  			</div>
+				  	</div>
+				</li>
+
+				<li class="img-box">
+					<a href="../html/inset.html"><img src="img/2.png"></a>
+					<div class="box">
+				  		<a href="../html/inset.html"><div class="img-title"><span>图标设计,应对APP臃肿化</span></div></a>
+			  			<div class="sub-img-title">
+			  				<div class="head-img"><a href="inset.html"><span class="head-img-name">那谁家小那谁</span></a></div>
+			  			</div>
+				  	</div>
+				</li>
+
+				<li class="img-box">
+					<a href="../html/inset.html"><img src="img/2.png"></a>
+					<div class="box">
+				  		<a href="inset.html"><div class="img-title"><span>图标设计,应对APP臃肿化</span></div></a>
+			  			<div class="sub-img-title">
+			  				<div class="head-img"><a href="inset.html"><span class="head-img-name">那谁家小那谁</span></a></div>
+			  			</div>
+				  	</div>
+				</li>
+
+				<li class="img-box">
+					<a href="../html/inset.html"><img src="img/2.png"></a>
+					<div class="box">
+				  		<a href="inset.html"><div class="img-title"><span>图标设计,应对APP臃肿化</span></div></a>
+			  			<div class="sub-img-title">
+			  				<div class="head-img"><a href="inset.html"><span class="head-img-name">那谁家小那谁</span></a></div>
+			  			</div>
+				  	</div>
+				</li>
+
 			</ul>
 		</div>
-		<div class="show_btn"><a href=""> → Show All</a></div>
 	</div>
-	</div>
+</div>
 
-	<div class="footer">
+    <div id="go-top">
+    	<a href=""><span></span></a>
+    </div>
+
+	<!--底页-->
+<div class="footer">
 	    	<div class="bot-link">
 	        	<div class="link-list">
 	        		  <ul class="linked">
@@ -106,11 +129,6 @@ I focus on UI & UX design. In next year, i was worked for Sohu.com, one of the m
 	        		  </ul>
 	        	</div>
         	</div>	
-    </div>
-</div>
-    
-    <div id="go-top">
-    	<a href=""><span></span></a>
     </div>
 
 </body>
