--- a/index.html
+++ b/index.html
@@ -8,7 +8,6 @@
     <meta name="description" content=""/>
     <meta name="keywords" content=""/>
     <title>Shuai Webdesign</title>
-    <link rel="stylesheet" type="text/css" href="css/font-awesome.min.css">
     <link rel="stylesheet" type="text/css" href="css/css3.css">
     <script type="text/javascript" src="js/jquery-1.8.0.min.js"></script>
     <script type="text/javascript" src="js/myjs.js"></script>
@@ -31,11 +30,15 @@
 		</div>
 
 		<div class="intro">
-			<div class="intro_infor">
+			<div class="intro_infor intro_infor_index">
 				<div class="intro_infor_left">- Hello</div>
-				<div class="intro_infor_right"><p>I am shuai, from University fo Cincinnati, DAAP College. 
-I focus on UI & UX design. In next year, i was worked for Sohu.com, one of the most biggest Internet Company in China. Our team has notched up 2 Billion views to date in June 23 2014.</p></div>
+				<div class="intro_infor_right"><p>My name is Shuai, from University fo Cincinnati, DAAP College. 
+I focus on UI & UX design. I was worked for Sohu.com, one of the most biggest Internet Company in China. Our team has notched up 2 Billion views to date in June 23 2014.</p></div>
 			</div>
+		</div>
+
+		<div class="location">
+			<div class="vertical-text"><p>- 12063.94 K M</p></div>
 		</div>
 
 	<div class="container">
@@ -92,7 +95,7 @@ I focus on UI & UX design. In next year, i was worked for Sohu.com, one of the m
 				</li>
 			</ul>
 		</div>
-		<div class="show_btn"><a href=""> → Show All</a></div>
+		<div class="show_btn"><a href="">→ Show All</a></div>
 	</div>
 	</div>
 
