--- a/portfolio.html
+++ b/portfolio.html
@@ -8,7 +8,6 @@
     <meta name="description" content=""/>
     <meta name="keywords" content=""/>
     <title>Shuai Webdesign</title>
-    <link rel="stylesheet" href="css/font-awesome.css">
     <link rel="stylesheet" type="text/css" href="css/css3.css">
     <script type="text/javascript" src="js/jquery-1.8.0.min.js"></script>
     <script type="text/javascript" src="js/myjs.js"></script>
@@ -30,9 +29,15 @@
 		</div>
 		</div>
 
-		<div class="intro">
+		<section class="link_back">
+				<div class="breadcrumb_nav_icon"><a class="h_icon" href="index.html"></a><span> / Portfolio</span></div>
+		</section>
+
+
+		<div class="intro intro_portfolio">
 			<div class="intro_infor">
-				<div class="intro_infor_icon"><a class="h_icon" href="index.html"></a><span>/ Portfolio</span></div>
+				<div class="intro_infor_left">- Portfolio</div>
+				<div class="intro_infor_right"><p>We have worked alongside clients of all sizes from global brands to small start-ups. Regardless of what kind of business we partner with, we pride ourselves on consistently delivering work of the highest quality. Here are a selection of the projects we've worked on recently.</p></div>
 			</div>
 		</div>
 
