--- a/contact.html
+++ b/contact.html
@@ -8,7 +8,6 @@
     <meta name="description" content=""/>
     <meta name="keywords" content=""/>
     <title>Shuai Webdesign</title>
-    <link rel="stylesheet" type="text/css" href="css/font-awesome.min.css">
     <link rel="stylesheet" type="text/css" href="css/css3.css">
     <script type="text/javascript" src="js/jquery-1.8.0.min.js"></script>
     <script type="text/javascript" src="js/myjs.js"></script>
@@ -30,20 +29,15 @@
 		</div>
 		</div>
 
-		<div class="intro">
-			<div class="intro_infor">
-				<div class="intro_infor_icon"><a class="h_icon" href="index.html"></a><span> / Contact</span></div>
-			</div>
-		</div>
+		<section class="link_back">
+				<div class="breadcrumb_nav_icon"><a class="h_icon" href="index.html"></a><span> / Contact</span></div>
+		</section>
 
 	    <div class="st">
 	    	<div class="store_w">
 	    		<div class="store store_1">
 	    			<div class="store_1_content">
-	    			<a href="" class="im"><div class="store_1_left">
-	    				<img src="../img/shoes.png">
-	    			</div></a>
-	    			<a href="" class="im"><div class="store_text store_1_right">
+                    <div class="store_text store_1_right">
 	    				<h1>KKTP撞色尖头牛皮便鞋</h1>
 	    				<p>服装品牌Skin由独立设计工作室 Mad Publisher创作并制作。希望尝试通过戏剧化的情绪与典雅的视觉效果来提升穿着者原有的个性与形象。</p>
 	    				<div class="store_materia"><span>材质：</span><span>牛皮</span></div>
@@ -59,7 +53,7 @@
 	    	<div class="store_g">
 	    		<div class="store store_2">
 	    			<div class="store_2_content">
-	    			<a href="" class="im"><div class="store_text store_2_left">
+	    			<div class="store_text store_2_left">
 	    				<h1>KKTP撞色尖头牛皮便鞋</h1>
 	    				<p>服装品牌Skin由独立设计工作室 Mad Publisher创作并制作。希望尝试通过戏剧化的情绪与典雅的视觉效果来提升穿着者原有的个性与形象。</p>
 	    				<div class="store_materia"><span>材质：</span><span>缎面雪纺</span></div>
@@ -69,9 +63,6 @@
 	    					<a href="" class="two"><i class="n_d"></i><span class="n_b">哈利波特</span></a>
 	    				</div>
 	    			</div>
-	    			<a href="" class="im"><div class="store_2_right">
-	    				<img src="../img/bag.png">
-	    			</div></a>
 	    		    </div>
 	    		</div>
 	    	</div>
