--- a/cv.html
+++ b/cv.html
@@ -8,7 +8,6 @@
     <meta name="description" content=""/>
     <meta name="keywords" content=""/>
     <title>Shuai Webdesign</title>
-    <link rel="stylesheet" type="text/css" href="css/font-awesome.min.css">
     <link rel="stylesheet" type="text/css" href="css/css3.css">
     <script type="text/javascript" src="js/jquery-1.8.0.min.js"></script>
     <script type="text/javascript" src="js/myjs.js"></script>
@@ -30,160 +29,98 @@
 		</div>
 		</div>
 
-		<div class="intro">
-			<div class="intro_infor">
-				<div class="intro_infor_icon"><a class="h_icon" href="index.html"></a><span> / CV</span></div>
-			</div>
-		</div>
-<!--首页-->
+		<section class="link_back">
+				<div class="breadcrumb_nav_icon"><a class="h_icon" href="index.html"></a><span> / CV</span></div>
+		</section>
 
-	<div class="inside-page">
-		<div class="inside-content">
-			<div class="inside-content-title">
-				<a href="../html/inset.html"><div class="in-img"><img src="../img/designer.png"></div></a>
-				<div class="in-text">
-					<span>图标设计,应对APP臃肿化</span>
-					<a href="../html/inset.html"><p>老谁家小谁</p></a>
-			    </div>
+	    <div class="cv_page">
+	    	<section class="edu">
+	    		<h1>EDUCATION</h1>
+	    	    <div class="ati">
+	    	      <div class="main_t">
+	    			<span class="main_t_l">University of Cincinnati, Cincinnati, Ohio</span>
+	    			<span class="main_t_r">August 2012 - December 2015</span>
+	    		  </div>
+	    		<p>- Master of Design. Major: Graphic Communication Design</p>
+	    	    </div>
 
-			    <div class="inside-content-message">
-				    <span class="message-icon icon-1">254</span>
-			    	<a href="#plun"><span class="message-icon icon-2">114</span></a>
-			    	<span class="message-icon icon-3">94</span>
-				<div class="message-share">
-					<div class="message-share-icon icon-4">
-						<ul>
-							<li class="wb"><a href="http://weibo.com/u/3657521705?from=myfollow_all"></a></li>
-							<li class="tb"><a href=""></a></li>
-						</ul>
-					</div>
-				</div>
-			</div>
-			</div>
+	    	    <div class="ati">
+	    	      <div class="main_t">
+	    			<span class="main_t_l">Hubei Insititute Of Fine Arts, Wuhan, China</span>
+	    			<span class="main_t_r">September 2007 - June 2011</span>
+	    		  </div>
+	    		<p>- Bachelor of Art. Major: Textile</p>
+	    	    </div>
+	    	</section>
 
-			<div class="inside-content-img"><img src="../img/inset.png"></div>
+	    	<section class="exp">
+	    		<h1>EXPERIENCE</h1>
+	    		<div class="ati">
+	    	      <div class="main_t">
+	    			<span class="main_t_l">UI & UX Designer  Sohu, Beijing,China</span>
+	    			<span class="main_t_r">December 2013 - December 2014</span>
+	    		  </div>
+	    		<p>- Worked at HTML5 & UED( User Experience Design )Group</p>
+	    	    </div>
 
-			<div class="inside-content-text">
-				<p>加班到凌晨点，一个人回家，害怕么？携带巨款去银行，担心么？有人来办公室砸场子，恐慌么？遇到这种情况要怎么办呢？有个随身的保镖是不是会好很多呢？对于普通人来说，这种看起来不切实际的事情，现在真的可以实现了。</p>
-				<p>初创公司Bannerman要做的就是这么一件事，按需提供即时的安保服务。用户只需要提前在 Bannerman 的官方网站，填写地址、预约时间、说明安保用途，30 分钟内 Bannerman 就会帮你安排。</p>
-				<p>Bannerman 提供的保镖都是魁梧的肌肉男，首先在视觉上就让你有安全感，让恶意的人有恐惧感。这些保镖大都是阿富汗和伊拉克的退伍军人，这些人事先会接受 40 小时的培训。Bannerman 将按照服务时间收取费用，每名保镖每小时的雇佣费用是 35 美元。这个费用要比同类水平的安保服务收费要低。</p>
-			</div>
-<!--评论-->
-<div class="m m-comment">
-		<tag name="plun" id="plun">
-			<div class="send">
-				<span>123条评论</span>
-				<a href="#enter">
-					<span class="send_btn">我要评论</span>
-				</a>
-			</div>
-		</tag>
+	    	    <div class="ati">
+	    	      <div class="main_t">
+	    			<span class="main_t_l">Graphic Designer  Michelman, Cincinnati, Ohio, USA</span>
+	    			<span class="main_t_r">May 2013 - August 2013</span>
+	    		  </div>
+	    		<p>- Supported Marketing Department to do the graphic work</p>
+	    	    </div>
 
-		<div class="comm" >
-			<div class="comm-content">
-				<ul class="comm-content-list">
-					<li class="comm-content-text">
-						<img src="../img/com.png">
-						<div class="comm-article">
-							<div class="comm-article-title"><span class="comm-name">whatapp:</span>
-							<span id="time">2014-05-30 <span>&nbsp 15:20</span></span></div>
-							<p class="comm-text">我们是相信能设计能创造巨大价值的设计师。我们是相信能设计能创造巨大价值的设计师。我们是相信能设计能创造巨大价值的设计师。</p>
-						</div>
-					</li>
+	    	    <div class="ati">
+	    	      <div class="main_t">
+	    			<span class="main_t_l">TA, GA  The University Of Cincinnati, Cincinnati, Ohio, USA</span>
+	    			<span class="main_t_r">August 2012 - Present</span>
+	    		  </div>
+	    		<p>- Worked for Professor Oscar Fernandez as teaching assistant in Visual History course to help students with their homework</p>
+	    		<p>- Worked for Professor Ben Meyer as graduate assistant to support him design the APP.</p>
+	    	    </div>
+	    	</section>
 
-					<li class="comm-content-text">
-						<img src="../img/designer.png">
-						<div class="comm-article">
-							<div class="comm-article-title"><span class="comm-name">whatapp:</span>
-							<span id="time">2014-05-30 <span>&nbsp 15:20</span></span></div>
-							<p class="comm-text">t</p>
-						</div>
-					</li>
+	    	<section class="pro">
+	    		<h1>PROJECTS</h1>
+	    		<div class="ati">
+	    	      <div class="main_t">
+	    			<span class="main_t_l">UED Blog Website</span>
+	    			<span class="main_t_r">October 2014 - December 2014</span>
+	    		  </div>
+	    		<p>- Responsive UI & UX Design, Front-End Developer</p>
+	    	    </div>
 
-					<li class="comm-content-text">
-						<img src="../img/com.png">
-						<div class="comm-article">
-							<div class="comm-article-title"><span class="comm-name">whatapp:</span>
-							<span id="time">2014-05-30 <span>&nbsp 15:20</span></span></div>
-							<p class="comm-text">@lazycat_luotao : 哈哈 好犀利</p>
-						</div>
-					</li>
+	    	    <div class="ati">
+	    	      <div class="main_t">
+	    			<span class="main_t_l">Sohu Film Website</span>
+	    			<span class="main_t_r">September 2014 - December 2014</span>
+	    		  </div>
+	    		<p>- Responsive UI & UX Design, Front-End Developer</p>
+	    	    </div>
 
-					<li class="comm-content-text">
-						<img src="../img/designer.png">
-						<div class="comm-article">
-							<div class="comm-article-title"><span class="comm-name">whatapp:</span>
-							<span id="time">2014-05-30 <span>&nbsp 15:20</span></span></div>
-							<p class="comm-text">Is very good, the design of the humanities with excellent color, visual comfortable</p>
-						</div>
-					</li>
+	    	    <div class="ati">
+	    	      <div class="main_t">
+	    			<span class="main_t_l">SCE Website</span>
+	    			<span class="main_t_r">January 2014 - May 2014</span>
+	    		  </div>
+	    		<p>- Responsive UI & UX Design</p>
+	    	    </div>
 
-					<li class="comm-content-text">
-						<img src="../img/com.png">
-						<div class="comm-article">
-							<div class="comm-article-title"><span class="comm-name">whatapp:</span>
-							<span id="time">2014-05-30 <span>&nbsp 15:20</span></span></div>
-							<p class="comm-text">现在html5和css3.0的结合更能体现出背景图片的趋势！关注中.</p>
-						</div>
-					</li>
-
-					<li class="comm-content-text">
-						<img src="../img/designer.png">
-						<div class="comm-article">
-							<div class="comm-article-title"><span class="comm-name">whatapp:</span>
-							<span id="time">2014-05-30 <span>&nbsp 15:20</span></span></div>
-							<p class="comm-text">我们是相信能设计能创造巨大价值的设计师。我们是相信能设计能创造巨大价值的设计师。我们是相信能设计能创造巨大价值的设计师。</p>
-						</div>
-					</li>
-				</ul>
-
-				<tag name="enter" id="enter">
-					<div class="enter">
-							<textarea placeholder="胡言乱语下" maxlength="300" class="text-form"></textarea>
-					</div>
-					<div class="enter-info">
-						<input class="enter-name" placeholder="您的昵称">
-						<button>提交</button>
-					</div>
-				</tag>
-
-		    </div>
+	    	    <div class="ati">
+	    	      <div class="main_t">
+	    			<span class="main_t_l">Seeword Reading APP & Seeword Reading Website</span>
+	    			<span class="main_t_r">January 2013 - Present</span>
+	    		  </div>
+	    		<p>- According to the user test to improve the APP’s Interface.</p>
+	    		<p>- Responsive UI & UX design the website</p>
+	    	    </div>
+	    	</section>
+	    	<section class="skill">
+	    		<h1>SKILLS</h1>
+	    		<div class="ati"><span>HTML5, CSS3, PS, AI, AE, In Design, Photograph</span></div>
+	    	</section>
 	    </div>
-</div>
-		</div>
-		<div class="inside-about">
-			<div class="inside-link">
-				<ul>
-					<li class="inside-link-title">相关</li>
-					<li><a href="">READ MORE</a></li>
-					<li><a href="">高考那些事</a></li>
-					<li><a href="">QQ6.0,一只“鹅”的自我修行</a></li>
-					<li><a href="">应对app臃肿化</a></li>
-					<li><a href="">创造更好的移动demo：工具篇</a></li>
-					<li><a href="">QQ大数据之办公室劳模</a></li>
-				</ul>
-			</div>
-			<div class="inside-hot">
-				<ul>
-					<li class="inside-link-title">热门</li>
-					<li><a href="">READ MORE</a></li>
-					<li><a href="">高考那些事</a></li>
-					<li><a href="">QQ6.0,一只“鹅”的自我修行</a></li>
-					<li><a href="">应对app臃肿化</a></li>
-					<li><a href="">创造更好的移动demo：工具篇</a></li>
-					<li><a href="">QQ大数据之办公室劳模</a></li>
-				</ul>
-			</div>
-			<div class="inside-QR">
-				<span class="QR-code"></span>
-				<span class="QR-info">
-					<p>扫一扫 &nbsp 关注我们</p>
-					<p>搜狐视频移动客户端</p>
-                </span>
-			</div>
-		</div>
-	</div>
-</div>
 <!--到顶部的按钮-->
 <div id="go-top" class="go-top"><a href="#"><span></span></a></div>
 <!--底页-->
@@ -197,7 +134,8 @@
 	        		  </ul>
 	        	</div>
         	</div>	
-    </div>
+ </div>
+ </div>
 
 
 </body>
