--- a/cv.html
+++ b/cv.html
@@ -18,7 +18,7 @@
 		<div class="header">
 			<div class="header-box">
 			<div class="top-img">
-				<img src="../img/.png">
+				<img src="img/logo.png">
 			</div>
 				<ul class="menu">
 					<li><a href="index.html">HOME</a></li>
