--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@ I focus on UI & UX design. I was worked for Sohu.com, one of the most biggest In
 				</li>
 			</ul>
 		</div>
-		<div class="show_btn"><a href="">→ Show All</a></div>
+		<div class="show_btn"><a href="portfolio.html">→ Show All</a></div>
 	</div>
 	</div>
 
