--- a/contact.html
+++ b/contact.html
@@ -30,79 +30,27 @@
 		</div>
 
 		<section class="link_back">
-				<div class="breadcrumb_nav_icon"><a class="h_icon" href="index.html"></a><span> / Contact</span></div>
+			<ul class="breadcrumb_nav_icon">
+				<li><a class="h_icon" href="index.html"></a></li>
+				<li class="sect"> / Contact</li>
+			</ul>
 		</section>
 
 	    <div class="st">
 	    	<div class="store_w">
-	    		<div class="store store_1">
-	    			<div class="store_1_content">
-                    <div class="store_text store_1_right">
-	    				<h1>KKTP撞色尖头牛皮便鞋</h1>
-	    				<p>服装品牌Skin由独立设计工作室 Mad Publisher创作并制作。希望尝试通过戏剧化的情绪与典雅的视觉效果来提升穿着者原有的个性与形象。</p>
-	    				<div class="store_materia"><span>材质：</span><span>牛皮</span></div>
-	    				<div class="store_size"><span>尺寸：</span><span>37 &nbsp 38 &nbsp 39 &nbsp 40</span></div></a>
-	    				<div class="store_person store_1_person">
-	    					<h2>268 RMB</h2>
-	    					<a href="" class="one"><i class="n_d"></i><span class="n_b">哈利波特</span></a>
-	    				</div>
-	    			</div>
-	    		    </div>
-	    		</div>
+	    		<div class=""></div>
 	    	</div>
+
 	    	<div class="store_g">
-	    		<div class="store store_2">
-	    			<div class="store_2_content">
-	    			<div class="store_text store_2_left">
-	    				<h1>KKTP撞色尖头牛皮便鞋</h1>
-	    				<p>服装品牌Skin由独立设计工作室 Mad Publisher创作并制作。希望尝试通过戏剧化的情绪与典雅的视觉效果来提升穿着者原有的个性与形象。</p>
-	    				<div class="store_materia"><span>材质：</span><span>缎面雪纺</span></div>
-	    				<div class="store_size"><span>尺寸：</span><span>37(cm) &nbsp&nbsp 胸围:92(cm) &nbsp&nbsp 衣长:68(cm)</span></div></a>
-	    				<div class="store_person store_2_person">
-	    					<h2>268 RMB</h2>
-	    					<a href="" class="two"><i class="n_d"></i><span class="n_b">哈利波特</span></a>
-	    				</div>
-	    			</div>
-	    		    </div>
-	    		</div>
+	    		
 	    	</div>
+
 	    	<div class="store_w">
-	    		<div class="store store_3">
-	    			<div class="store_3_content">
-	    			<a href="" class="im"><div class="store_3_left">
-	    				<img src="../img/robbt.png">
-	    			</div></a>
-	    			<a href="" class="im"><div class="store_text store_3_right">
-	    				<h1>KKTP撞色尖头牛皮便鞋</h1>
-	    				<p>服装品牌Skin由独立设计工作室 Mad Publisher创作并制作。希望尝试通过戏剧化的情绪与典雅的视觉效果来提升穿着者原有的个性与形象。</p>
-	    				<div class="store_materia"><span>材质：</span><span>缎面雪纺</span></div>
-	    				<div class="store_size"><span>尺寸：</span><span>37(cm) &nbsp&nbsp 胸围:92(cm) &nbsp&nbsp 衣长:68(cm)</span></div></a>
-	    				<div class="store_person store_3_person">
-	    					<h2>268 RMB</h2>
-	    					<a href="" class="three"><i class="n_d"></i><span class="n_b">哈利波特</span></a>
-	    				</div>
-	    			</div>
-	    		    </div>
-	    		</div>
+
 	    	</div>
+
 	    	<div class="store_g">
-	    		<div class="store store_4">
-	    			<div class="store_4_content">
-	    			<a href="" class="im"><div class="store_text store_4_left">
-	    				<h1>KKTP撞色尖头牛皮便鞋</h1>
-	    				<p>服装品牌Skin由独立设计工作室 Mad Publisher创作并制作。希望尝试通过戏剧化的情绪与典雅的视觉效果来提升穿着者原有的个性与形象。</p>
-	    				<div class="store_materia"><span>材质：</span><span>缎面雪纺</span></div>
-	    				<div class="store_size"><span>尺寸：</span><span>37(cm) &nbsp&nbsp 胸围:92(cm) &nbsp&nbsp 衣长:68(cm)</span></div></a>
-	    				<div class="store_person store_4_person">
-	    					<h2>268 RMB</h2>
-	    					<a href="" class="four"><i class="n_d"></i><span class="n_b">哈利波特</span></a>
-	    				</div>
-	    			</div>
-	    			<a href="" class="im"><div class="store_2_right">
-	    				<img src="../img/cloth.png">
-	    			</div></a>
-	    		    </div>
-	    		</div>
+
 	    	</div>
 	    </div>
     
