--- a/cv.html
+++ b/cv.html
@@ -30,7 +30,10 @@
 		</div>
 
 		<section class="link_back">
-				<div class="breadcrumb_nav_icon"><a class="h_icon" href="index.html"></a><span> / CV</span></div>
+			<ul class="breadcrumb_nav_icon">
+				<li><a class="h_icon" href="index.html"></a></li>
+				<li class="sect"> / CV</li>
+			</ul>
 		</section>
 
 	    <div class="cv_page">
