--- a/portfolio.html
+++ b/portfolio.html
@@ -107,7 +107,7 @@
 				  	</div>
 				</li>
 
-				<li class="img-box" id="box_2">
+				<li class="img-box" id="box_mobile">
 					<a href="../inset.html"><img id="m-img" src="img/iphone.gif"></a>
 					<div class="box">
 				  		<a href="../inset.html"><div class="img-title"><span>图标设计,应对APP臃肿化</span></div></a>
