--- a/contact.html
+++ b/contact.html
@@ -38,19 +38,31 @@
 
 	    <div class="st">
 	    	<div class="store_w">
-	    		<div class=""></div>
+	    		<div class="store_in">
+	    			<div class="store_in_l"><span class="in_l_img"></span></div>
+	    			<div class="store_in_r"></div>
+	    		</div>
 	    	</div>
 
 	    	<div class="store_g">
-	    		
+	    		<div class="store_in">
+	    			<div class="store_in_l"></div>
+	    			<div class="store_in_r"></div>
+	    		</div>
 	    	</div>
 
 	    	<div class="store_w">
-
+	    		<div class="store_in">
+	    			<div class="store_in_l"></div>
+	    			<div class="store_in_r"></div>
+	    		</div>
 	    	</div>
 
 	    	<div class="store_g">
-
+	    		<div class="store_in">
+	    			<div class="store_in_l"></div>
+	    			<div class="store_in_r"></div>
+	    		</div>
 	    	</div>
 	    </div>
     
