--- a/contact.html
+++ b/contact.html
@@ -36,35 +36,12 @@
 			</ul>
 		</section>
 
-	    <div class="st">
-	    	<div class="store_w">
-	    		<div class="store_in">
-	    			<div class="store_in_l"><span class="in_l_img"></span></div>
-	    			<div class="store_in_r"></div>
-	    		</div>
-	    	</div>
-
-	    	<div class="store_g">
-	    		<div class="store_in">
-	    			<div class="store_in_l"></div>
-	    			<div class="store_in_r"></div>
-	    		</div>
-	    	</div>
-
-	    	<div class="store_w">
-	    		<div class="store_in">
-	    			<div class="store_in_l"></div>
-	    			<div class="store_in_r"></div>
-	    		</div>
-	    	</div>
-
-	    	<div class="store_g">
-	    		<div class="store_in">
-	    			<div class="store_in_l"></div>
-	    			<div class="store_in_r"></div>
-	    		</div>
-	    	</div>
-	    </div>
+		<div class="contact_box">
+			<div class="box_infor">
+				<div class="email_info"><span></span><span></span></div>
+				<div class="phone_info"><span></span><a href=""><span></span></a></div>
+			</div>
+		</div>
     
     <div id="go-top">
     	<a href=""><span></span></a>
@@ -81,7 +58,6 @@
 	        		  </ul>
 	        	</div>
         	</div>	
-    </div>
-
+</div>
 </body>
 </html>
