--- a/index.html
+++ b/index.html
@@ -18,21 +18,19 @@
 		<div class="header">
 			<div class="header-box">
 			<div class="top-img">
-				<img src="img/logo.png">
+				<a href="index.html"><img src="img/logo.png"></a>
 			</div>
 				<ul class="menu">
-					<li class="selected"><a href="index.html">HOME</a></li>
 					<li><a href="portfolio.html">PORTFOLIO</a></li>
 					<li><a href="cv.html">CV</a></li>
-					<li><a href="contact.html">CONTACT</a></li>
 				</ul>
 		</div>
 		</div>
 
 		<div class="intro">
 			<div class="intro_infor intro_infor_index">
-				<div class="intro_infor_left">- Hello</div>
-				<div class="intro_infor_right"><p>My name is Shuai, from University fo Cincinnati, DAAP College. 
+				<div class="intro_infor_left"><span>- Hello</span></div>
+				<div class="intro_infor_right"><p>My name is <em>Shuai</em>, from University fo Cincinnati, DAAP College. 
 I focus on UI & UX design. I was worked for Sohu.com, one of the most biggest Internet Company in China. Our team has notched up 2 Billion views to date in June 23 2014.</p></div>
 			</div>
 		</div>
@@ -45,11 +43,11 @@ I focus on UI & UX design. I was worked for Sohu.com, one of the most biggest In
 		<div class="waterfall">
 			<ul class="img-list">
 				<li class="img-box" id="img-box-b">
-					<a href="../html/inset.html"><img id="b-img" src="img/1.png"></a>
+					<a href="portfolio-sohufilm.html"><img id="b-img" src="img/1.png"></a>
 					<div class="box" id="b_box">
-				  		<a href="../html/inset.html"><div class="img-title"><span>See Word Reading Project</span></div></a>
+				  	 <div class="img-title"><span>See Word Reading Project</span></div>
 			  			<div class="sub-img-title">
-			  				<div class="head-img"><a href="../inset.html"><span class="head-img-name">See Project</span></a></div>
+			  				<div class="head-img"><span class="head-img-name">See Project</span></div>
 			  			</div>
 				  	</div>
 				</li>
@@ -102,10 +100,10 @@ I focus on UI & UX design. I was worked for Sohu.com, one of the most biggest In
 	<div class="footer">
 	    	<div class="bot-link">
 	        	<div class="link-list">
+	        		<div class="lik-t"><p>477 Riddle Rd</p><p>Cincinnati, OH</p></div>
 	        		  <ul class="linked">
-	        			<li class="lik lik-t"><p>477 Riddle Rd</p><p>Cincinnati,OH</p></li>
-	        			<li class="lik"><a href="">917-545-2916</a></li>
-	        			<li class="lik"><a href="">shuaizhou487@gmail.com</a></li>
+	        			<li class="lik"><span class="phone"></span><a href="">917-545-2916</a></li>
+	        			<li class="lik"><span class="email"></span><a href="mailto:shuaizhou487@gmail.com">shuaizhou487@gmail.com</a></li>
 	        		  </ul>
 	        	</div>
         	</div>	
