--- a/portfolio.html
+++ b/portfolio.html
@@ -18,41 +18,35 @@
 		<div class="header">
 			<div class="header-box">
 			<div class="top-img">
-				<img src="img/logo.png">
+				<a href="index.html"><img src="img/logo.png"></a>
 			</div>
 				<ul class="menu">
-					<li><a href="index.html">HOME</a></li>
 					<li class="selected"><a href="portfolio.html">PORTFOLIO</a></li>
 					<li><a href="cv.html">CV</a></li>
-					<li><a href="contact.html">CONTACT</a></li>
 				</ul>
 		</div>
 		</div>
 
-		<section class="link_back">
-			<ul class="breadcrumb_nav_icon">
-				<li><a class="h_icon" href="index.html"></a></li>
-				<li class="sect"> / Portfolio</li>
-			</ul>
-		</section>
-
-
 		<div class="intro intro_portfolio">
 			<div class="intro_infor">
-				<div class="intro_infor_left">- Portfolio</div>
+				<div class="intro_infor_left"><span id="gre">- Portfolio</span></div>
 				<div class="intro_infor_right"><p>We have worked alongside clients of all sizes from global brands to small start-ups. Regardless of what kind of business we partner with, we pride ourselves on consistently delivering work of the highest quality. Here are a selection of the projects we've worked on recently.</p></div>
 			</div>
+		</div>
+
+		<div class="location">
+			<div class="vertical-text"><p>- 12063.94 K M</p></div>
 		</div>
 
 		<div class="container">
 		<div class="waterfall">
 			<ul class="img-list">
 				<li class="img-box" id="img-box-b">
-					<a href="../html/inset.html"><img id="b-img" src="img/1.png"></a>
+					<a href="portfolio-sohufilm.html"><img id="b-img" src="img/1.png"></a>
 					<div class="box" id="b_box">
-				  		<a href="../html/inset.html"><div class="img-title"><span>See Word Reading Project</span></div></a>
+				  		<div class="img-title"><span>SoHu Film Website</span></div>
 			  			<div class="sub-img-title">
-			  				<div class="head-img"><a href="../inset.html"><span class="head-img-name">See Project</span></a></div>
+			  				<div class="head-img"><span class="head-img-name">See Project</span></div>
 			  			</div>
 				  	</div>
 				</li>
@@ -178,17 +172,18 @@
     </div>
 
 	<!--底页-->
-<div class="footer">
+    <div class="footer">
 	    	<div class="bot-link">
 	        	<div class="link-list">
+	        		<div class="lik-t"><p>477 Riddle Rd</p><p>Cincinnati, OH</p></div>
 	        		  <ul class="linked">
-	        			<li class="lik lik-t"><p>477 Riddle Rd</p><p>Cincinnati,OH</p></li>
 	        			<li class="lik"><a href="">917-545-2916</a></li>
-	        			<li class="lik"><a href="">shuaizhou487@gmail.com</a></li>
+	        			<li class="lik"><a href="mailto:shuaizhou487@gmail.com">shuaizhou487@gmail.com</a></li>
 	        		  </ul>
 	        	</div>
         	</div>	
     </div>
+</div>    
 
 </body>
 </html>
