--- a/cv.html
+++ b/cv.html
@@ -18,25 +18,24 @@
 		<div class="header">
 			<div class="header-box">
 			<div class="top-img">
-				<img src="img/logo.png">
+				<a href="index.html"><img src="img/logo.png"></a>
 			</div>
 				<ul class="menu">
-					<li><a href="index.html">HOME</a></li>
 					<li><a href="portfolio.html">PORTFOLIO</a></li>
-					<li class="selected"><a href="cv.html">CV</a></li>
-					<li><a href="contact.html">CONTACT</a></li>
+					<li class="selected2"><a href="cv.html">CV</a></li>
 				</ul>
 		</div>
 		</div>
 
-		<section class="link_back">
-			<ul class="breadcrumb_nav_icon">
-				<li><a class="h_icon" href="index.html"></a></li>
-				<li class="sect"> / CV</li>
-			</ul>
-		</section>
+		<div class="intro intro_portfolio">
+			<div class="intro_infor">
+				<div class="intro_infor_left"><a href=""><span id="red"> Download </span></a></div>
+				<div class="intro_infor_right"></div>
+			</div>
+		</div>
 
 	    <div class="cv_page">
+	    	<div class="cv_name"><span>Shuai Zhou</span></div>
 	    	<section class="edu">
 	    		<h1>EDUCATION</h1>
 	    	    <div class="ati">
@@ -127,17 +126,17 @@
 <!--到顶部的按钮-->
 <div id="go-top" class="go-top"><a href="#"><span></span></a></div>
 <!--底页-->
-<div class="footer">
+      <div class="footer">
 	    	<div class="bot-link">
 	        	<div class="link-list">
+	        		<div class="lik-t"><p>477 Riddle Rd</p><p>Cincinnati, OH</p></div>
 	        		  <ul class="linked">
-	        			<li class="lik lik-t"><p>477 Riddle Rd</p><p>Cincinnati,OH</p></li>
 	        			<li class="lik"><a href="">917-545-2916</a></li>
-	        			<li class="lik"><a href="">shuaizhou487@gmail.com</a></li>
+	        			<li class="lik"><a href="mailto:shuaizhou487@gmail.com">shuaizhou487@gmail.com</a></li>
 	        		  </ul>
 	        	</div>
         	</div>	
- </div>
+      </div>
  </div>
 
 
