--- a/portfolio.html
+++ b/portfolio.html
@@ -30,7 +30,7 @@
 		<div class="intro intro_portfolio">
 			<div class="intro_infor">
 				<div class="intro_infor_left"><span id="gre">- Portfolio</span></div>
-				<div class="intro_infor_right"><p>We have worked alongside clients of all sizes from global brands to small start-ups. Regardless of what kind of business we partner with, we pride ourselves on consistently delivering work of the highest quality. Here are a selection of the projects we've worked on recently.</p></div>
+				<div class="intro_infor_right"><p>I have worked on some website & APP. Regardless of what kind of website we partner with, we pride ourselves on consistently delivering work of the highest quality. Here are a selection of the projects I've worked on recently.</p></div>
 			</div>
 		</div>
 
