--- a/index.html
+++ b/index.html
@@ -100,10 +100,16 @@ I focus on UI & UX design. I was worked for Sohu.com, one of the most biggest In
 	<div class="footer">
 	    	<div class="bot-link">
 	        	<div class="link-list">
-	        		<div class="lik-t"><p>477 Riddle Rd</p><p>Cincinnati, OH</p></div>
+	        		<div class="lik-t">
+	        			<ul class="linked">
+	        			<li class="lik"><span class="linkin">Linkin</span></li>
+	        			<li class="lik"><span class="facebook">facebook</span></li>
+	        		  </ul>
+	        		</div>
+
 	        		  <ul class="linked">
-	        			<li class="lik"><span class="phone"></span><a href="">917-545-2916</a></li>
-	        			<li class="lik"><span class="email"></span><a href="mailto:shuaizhou487@gmail.com">shuaizhou487@gmail.com</a></li>
+	        			<li class="lik"><span class="phone"><a href="">917-545-2916</a></span></li>
+	        			<li class="lik"><span class="email"><a href="mailto:shuaizhou487@gmail.com">shuaizhou487@gmail.com</a></span></li>
 	        		  </ul>
 	        	</div>
         	</div>	
